# Barista-Intelligence

./: .env.example  Dockerfile  README.html  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
api/: main.py
api/routes/: config.py  metrics.py  orders.py  scheduler.py
app/: main.py
app/pages/: 2_Post_Rush.py  3_ML_Signals.py  4_Config.py
core/pos/: mock_stream.py
core/rl/: agent.py
core/scheduler/: concurrent_scheduler.py
core/scorer/: complexity_scorer.py
data/processed/: sample_orders.csv
scripts/: train_rl.py  train_scorer.py
tests/integration/: test_api.py  test_full_pipeline.py
tests/unit/: test_rl_agent.py  test_scheduler.py  test_scorer.py
